# spline-cpp-minimal

./: CMakeLists.txt
src/: main.cpp
